--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
             </div>
         </div>
     </section>
-    <script src="main.js"></script>
+    <script src="mcódigoain.js"></script>
 </body>
 
 </html>
